--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,51 +1,67 @@
 .fl {
     display: flex;
     align-items: center;
+
     &.cl {
         flex-direction: column;
     }
+
     &.j-c {
         justify-content: center;
     }
+
     &.j-b {
         justify-content: space-between;
     }
+
     &.j-st {
-justify-content: start;
+        justify-content: start;
     }
+
     &.j-end {
         justify-content: end;
     }
+
     &.a-i {
         align-items: initial;
     }
+
     &.a-st {
         align-items: start;
     }
+
     &.a-end {
         align-items: end;
     }
-   &.g-1 {
+
+    &.g-1 {
         gap: 0.25rem;
     }
+
     &.g-2 {
         gap: 0.5rem;
     }
+
     &.g-3 {
         gap: 1rem;
     }
+
     &.g-4 {
         gap: 1.5rem;
     }
+
     &.g-5 {
         gap: 3rem;
     }
+
     &.g-6 {
         gap: 5rem;
     }
+
     &.g-7 {
         gap: 7.5rem;
     }
+
     &.g-8 {
         gap: 10rem;
     }
@@ -56,26 +72,52 @@ justify-content: start;
 .p-1 {
     padding: 0.25rem;
 }
+
 .p-2 {
     padding: 0.5rem;
 }
+
 .p-3 {
     padding: 1rem;
 }
+
 .p-4 {
     padding: 1.5rem;
 }
+
 .p-5 {
     padding: 3rem;
+}
+
+.ps-1 {
+    padding-left: 0.25rem;
+}
+
+.ps-2 {
+    padding-left: 0.5rem;
+}
+
+.ps-3 {
+    padding-left: 1rem;
+}
+
+.ps-4 {
+    padding-left: 1.5rem;
+}
+
+.ps-5 {
+    padding-left: 3rem;
 }
 
 .pl-0 {
     padding-left: 0;
 }
+
 .mt-1 {
     margin-top: 0.25rem;
 }
-.my-0{
+
+.my-0 {
     margin-top: 0;
     margin-bottom: 0;
 }
